--- a/laocaibao/application-dev.properties
+++ b/laocaibao/application-dev.properties
@@ -1,3 +1,5 @@
 spring.application.name=config-server
 server.port=8887
 foo=foo version 7
+management.endpoints.web.expose="*"
+management.endpoints.refresh.enabled=true
