--- a/laocaibao/application-dev.properties
+++ b/laocaibao/application-dev.properties
@@ -3,3 +3,4 @@ server.port=8887
 foo=foo version 8
 management.endpoints.web.expose="*"
 management.endpoints.refresh.enabled=true
+management.security.enabled=false
