--- a/laocaibao/application-dev.properties
+++ b/laocaibao/application-dev.properties
@@ -4,3 +4,6 @@ foo=foo version 1
 management.endpoints.web.expose="*"
 management.endpoints.refresh.enabled=true
 management.security.enabled=false
+eureka.client.serviceUrl.defaultZone=http://localhost:8889/eureka/
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.serviceId=config-server
